--- a/homework2/index.html
+++ b/homework2/index.html
@@ -26,5 +26,16 @@
         <div class="item4"></div>
         </div>
     </div>
+    <br>
+    <header> 
+        <ul>
+            <li><a href="">Link 1</a></li>
+            <li><a href="">Link 2</a></li>
+            <li><a href="">Link 3</a></li>
+            <li><a href="">Link 4</a></li>
+            <li><a href="">Link 5</a></li>
+            <li><a href="">Link 6</a></li>
+        </ul>
+    </header>
 </body>
 </html>
