--- a/homework2/index.html
+++ b/homework2/index.html
@@ -37,5 +37,8 @@
             <li><a href="">Link 6</a></li>
         </ul>
     </header>
+    <aside>
+        <a href="">link</a>
+    </aside>
 </body>
 </html>
