add section adv

--- a/homework2/index.html
+++ b/homework2/index.html
@@ -40,5 +40,9 @@
     <aside>
         <a href="">link</a>
     </aside>
+    <div class="adv">
+        <h2>sdfg</h2>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
 </body>
 </html>
