--- a/homework2/index.html
+++ b/homework2/index.html
@@ -43,6 +43,8 @@
     <div class="adv">
         <h2>sdfg</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+        <h1>text</h1>
+        <h2>text</h2>
     </div>
 </body>
 </html>
