--- a/homework2/index.html
+++ b/homework2/index.html
@@ -44,5 +44,7 @@
         <h2>sdfg</h2>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
+    <a href="">sdfgdsfg</a>
+    <p>dxhbdtfghre</p>
 </body>
 </html>
